[gd_scene load_steps=8 format=3 uid="uid://bm85qtfeyunxm"]

[ext_resource type="Script" uid="uid://bilnpogh155nn" path="res://script/level/BuildingInterior.gd" id="1_xxcrk"]
[ext_resource type="Texture2D" uid="uid://dqob45js6j7s7" path="res://scene/component/level/planet-base-building/ui-assets/Base.png" id="2_8o2ed"]
[ext_resource type="Texture2D" uid="uid://cblqlp086jww3" path="res://scene/component/level/planet-base-building/ui-assets/door.png" id="3_1hp12"]
[ext_resource type="Texture2D" uid="uid://ddf5jv3pfel43" path="res://scene/component/level/planet-base-building/ui-assets/hologram.png" id="4_mcd4b"]
[ext_resource type="Texture2D" uid="uid://dua6om0rbnwne" path="res://scene/component/level/planet-base-building/ui-assets/recorder.png" id="5_jdq67"]
[ext_resource type="FontFile" uid="uid://cbuih6hp54o7h" path="res://script/marker/Pixeled.ttf" id="6_k4hxm"]
[ext_resource type="Script" uid="uid://d4js83clkl3y7" path="res://script/ui/ImageButton.gd" id="6_xdlbp"]

[node name="BuildingInterior" type="Node2D"]
script = ExtResource("1_xxcrk")
metadata/_custom_type_script = "uid://bilnpogh155nn"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(576.3334, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_8o2ed")

[node name="Door" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_1hp12")

[node name="Hologram" type="Sprite2D" parent="."]
position = Vector2(578, 323)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_mcd4b")

[node name="Recorder" type="Sprite2D" parent="."]
position = Vector2(578, 323)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_jdq67")

[node name="DoorButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -10.0
offset_right = 106.0
offset_bottom = 657.0
mouse_default_cursor_shape = 2
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
script = ExtResource("6_xdlbp")

[node name="HologramText" type="Label" parent="."]
offset_left = 548.0
offset_top = 68.0
offset_right = 808.0
offset_bottom = 207.0
rotation = -0.032559052
theme_override_colors/font_color = Color(0.6265183, 0.9355532, 1, 1)
theme_override_fonts/font = ExtResource("6_k4hxm")
theme_override_font_sizes/font_size = 11
text = "This is some example text that is very smart and shit idk"
autowrap_mode = 1
